# portdoc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  dist-workspace.toml
.agents/skills/adopt/: SKILL.md
.agents/skills/autopilot/: SKILL.md
.agents/skills/check/: SKILL.md
.agents/skills/feature/: SKILL.md
.agents/skills/fix/: SKILL.md
.agents/skills/implement/: SKILL.md
.agents/skills/onboard/: SKILL.md
.agents/skills/overview/: SKILL.md
.agents/skills/status/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/autopilot/: SKILL.md
.claude/skills/brief/: SKILL.md
.claude/skills/complete/: SKILL.md
.claude/skills/doctor/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/onboard/: SKILL.md
.claude/skills/prototype/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/tests/: SKILL.md
.claude/skills/try/: SKILL.md
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
blueprint/: build-plan.md  project-plan.md
blueprint/context/: ai-interaction.md  coding-standards.md  current-feature.md  project-overview.md
blueprint/history/features/: 01-mock-snapshot-contract.md  02-embedded-web-shell.md  03-mock-dashboard-ui.md  04-platform-probe-boundary.md  05-linux-port-probe.md  06-snapshot-adapter.md  07-project-grouping.md  08-developer-labels.md  09-url-exposure-labels.md  10-conflicts-stale-hints.md  11-search-and-filters.md  12-safe-stop.md  13a-inspect-drawer-port-lookup.md  13b-ignore-service.md  14a-desktop-app-labels.md  14b-docker-tab.md  14c-advanced-tab.md  15a-macos-probe.md  15b-windows-probe.md  15c-release-pipeline.md  (+5 more)
prototypes/: conflicts.html  dashboard.html  inspect.html  services.html  theme.css
src/: action.rs  adapter.rs  advanced.rs  config.rs  docker.rs  exec.rs  facts.rs  hint.rs  label.rs  main.rs  mock.rs  project.rs  snapshot.rs
src/probe/: linux.rs  macos.rs  mod.rs  windows.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+41 files in other folders)
