[package]
name = "portdoc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
open = "5"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
