[package]
name = "portdoc"
version = "0.1.1-rc.1"
edition = "2024"
description = "Local dev server control panel"
repository = "https://github.com/bradtraversy/portdoc"
homepage = "https://github.com/bradtraversy/portdoc"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
netstat2 = "0.11.2"
sysinfo = "0.39.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
